<resources>
    <string name="action_settings">Settings</string>
    <string name="action_search">جستجو</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">فروشگاه</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="moset_sold">محصولات پرفروش</string>
    <string name="moset_visited">جدیدترین کالاها</string>
    <string name="view_all">لیست کامل</string>
    <string name="title_activity_vitrin">فروشگاه</string>
    <string name="title_activity_select_shipment_type">ارسال سفارش</string>
    <string name="products_category">دسته بندی محصولات</string>
    <string name="your_basket">سبد خرید شما</string>
    <string name="empty_basket_hint">سبد خرید شما خالی است.</string>
    <string name="total">مجموع</string>
    <string name="product">کالا</string>
    <string name="toman">تومان</string>
    <string name="yes">بلی</string>
    <string name="no">نه</string>
    <string name="attention">توجه</string>
    <string name="register_basket">ثبت نهایی سبد خرید</string>
    <string name="lbl_order_destination_address">آدرس تحویل سفارش:</string>
    <string name="lbl_order_shipment_type">شیوه ارسال سفارش:</string>
    <string name="do_you_want_factor">آیا مایل به دریافت فاکتور هستید؟</string>
    <string name="lbl_province">استان:</string>
    <string name="province">استان</string>
    <string name="lbl_city">شهر:</string>
    <string name="city">شهر</string>
    <string name="lbl_postal_code">کدپستی:</string>
    <string name="postal_code">کدپستی</string>
    <string name="lbl_emergency_tel">شماره تماس اضطراری:</string>
    <string name="emergency_tel">شماره تماس اضطراری</string>
    <string name="lbl_home_tel">شماره تماس ثابت:</string>
    <string name="home_tel">شماره تماس ثابت</string>
    <string name="change_address">تغییر آدرس</string>
    <string name="remove_last_product_question">آیا مایل به حذف این کالا از سبد خرید خود هستید؟</string>
    <string name="title_activity_address">آدرس شما</string>
    <string name="title_activity_login">ورود</string>
    <string name="transferee_name">نام تحویل گیرنده</string>
    <string name="transferee_EmergencyTel">شماره تماس همراه</string>
    <string name="transferee_tel_with_code">شماره تماس ثابت به همراه کد شهرستان</string>
    <string name="address">ادرس</string>
    <string name="select_location">انتخاب موقعیت مکانی</string>
    <string name="ok">تایید</string>
    <string name="user">کاربر</string>
    <string name="userTel">شماره تماس کاربر</string>
    <string name="google_play_service_alert">در حال حاضر امکان استفاده از سرویس موقعیت یاب گوگل میسر نیست. لطفا نسبت به نصب و به روز بودن گوگل پلی سرویس خود اطمینان یابید</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_products_groups">گروه کالاها</string>
    <string name="is_not_valid_value">مقدار %1$s صحیح نیست</string>
    <string name="please_enter_variable">لطفا %1$s وارد نمایید</string>

    <string name="title_activity_welcome">خوش آمدید</string>
    <string name="start">شروع</string>
    <string name="next">بعدی</string>
    <string name="welcome_title_1">فروشگاه آنلاین مواد غذایی</string>
    <string name="welcome_title_2">با تنوعی بی نظیر و قیمت هایی باور نکردنی</string>


</resources>
