<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:id="@+id/txtDestinationAddressTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/lbl_order_destination_address"
                    android:textColor="@color/colorPrimaryTitle"
                    android:textSize="@dimen/normal_font_size" />

                <TextView
                    android:id="@+id/lblProvince"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/txtDestinationAddressTitle"
                    android:layout_marginTop="20dp"
                    android:alpha="0.8"
                    android:text="@string/lbl_province"
                    android:textColor="@color/colorPrimaryTitle"
                    android:textSize="@dimen/normal_font_size" />

                <TextView
                    android:id="@+id/txtProvince"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtDestinationAddressTitle"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_toLeftOf="@id/lblProvince"
                    android:text="@string/province"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/normal_font_size" />

                <TextView
                    android:id="@+id/lblCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtDestinationAddressTitle"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_toLeftOf="@id/txtProvince"
                    android:alpha="0.8"
                    android:text="@string/lbl_city"
                    android:textColor="@color/colorPrimaryTitle"
                    android:textSize="@dimen/normal_font_size" />

                <TextView
                    android:id="@+id/txtCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtDestinationAddressTitle"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_toLeftOf="@id/lblCity"
                    android:text="@string/city"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/normal_font_size" />

                <TextView
                    android:id="@+id/txtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtProvince"
                    android:layout_marginTop="20dp"
                    android:gravity="right"
                    android:text="@string/city"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/normal_font_size" />

                <TextView
                    android:id="@+id/lblPostalCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/txtAddress"
                    android:layout_marginTop="20dp"
                    android:alpha="0.8"
                    android:text="@string/lbl_postal_code"
                    android:textColor="@color/colorPrimaryTitle"
                    android:textSize="@dimen/normal_font_size" />

                <TextView
                    android:id="@+id/txtPostalCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtAddress"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_toLeftOf="@id/lblPostalCode"
                    android:text="@string/postal_code"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/normal_font_size" />

                <TextView
                    android:id="@+id/lblEmergencyTel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/lblPostalCode"
                    android:layout_marginTop="20dp"
                    android:alpha="0.8"
                    android:text="@string/lbl_emergency_tel"
                    android:textColor="@color/colorPrimaryTitle"
                    android:textSize="@dimen/normal_font_size" />

                <TextView
                    android:id="@+id/txtEmergencyTel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lblPostalCode"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_toLeftOf="@id/lblEmergencyTel"
                    android:text="@string/emergency_tel"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/normal_font_size" />

                <TextView
                    android:id="@+id/lblHomeTel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/lblEmergencyTel"
                    android:layout_marginTop="20dp"
                    android:alpha="0.8"
                    android:text="@string/lbl_home_tel"
                    android:textColor="@color/colorPrimaryTitle"
                    android:textSize="@dimen/normal_font_size" />

                <TextView
                    android:id="@+id/txtHomeTel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lblEmergencyTel"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_toLeftOf="@id/lblHomeTel"
                    android:text="@string/home_tel"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/normal_font_size" />

                <TextView
                    android:id="@+id/btnChangeAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/lblHomeTel"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/change_address"
                    android:textColor="@color/colorSecondaryTitle"
                    android:textSize="@dimen/normal_font_size" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/lblShipmentType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="20dp"
                    android:text="@string/lbl_order_shipment_type"
                    android:textColor="@color/colorPrimaryTitle"
                    android:textSize="@dimen/normal_font_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/lblShipmentType"
                    android:background="#e0e0e0" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/ckFactor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:drawablePadding="10dp"
                    android:gravity="right|center_vertical"
                    android:layoutDirection="ltr"
                    android:text="@string/do_you_want_factor"
                    android:checked="true"
                    android:textColor="@color/colorPrimaryTitle"
                    android:textSize="@dimen/normal_font_size" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
