<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#88000000"
    android:paddingBottom="80dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="80dp"
    tools:context=".BasketFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="#fff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="25dp">

            <TextView
                android:id="@+id/txtBasketTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/your_basket"
                android:textColor="@color/colorPrimaryTitle"
                android:textSize="16sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/lst_basketItem"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_below="@id/txtMostSoldTitle"
                android:layout_marginTop="5dp"
                android:visibility="visible"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txtEmptyBasketHint"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_weight="1"
                android:visibility="gone"
                android:text="@string/empty_basket_hint"
                android:textColor="@color/colorPrimaryTitle"
                android:textSize="16sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="right|center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:id="@+id/txtTotalCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/product"
                    android:textColor="@color/colorPrimaryTitle"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtTotalPrice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/colorPrimaryPrice"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textColor="@color/colorPrimaryTitle"
                    android:textSize="14sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnRegisterBasket"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/btn_red"
                android:text="@string/register_basket"
                android:textColor="#fff"
                android:textSize="18sp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
